--- a/snueue/assets/stylesheets/app.scss
+++ b/snueue/assets/stylesheets/app.scss
@@ -41,6 +41,7 @@ footer {
   text-align: center;
   background: $satsuki-blue;
   color: $reddit-blue;
+  z-index: 20;
 }
 
 /* Browser Specific Styles */
