--- a/snueue/assets/stylesheets/_ui.scss
+++ b/snueue/assets/stylesheets/_ui.scss
@@ -1,26 +1,4 @@
-@mixin form-select  {
-  -webkit-appearance: none !important;
-  -moz-appearance: none !important;
-  background-color: $ghost-grey;
-  border-radius: 0;
-
-  // Hide the dropdown arrow shown in newer IE versions
-  &::-ms-expand {
-    display: none;
-  }
-
-  // The custom arrow has some fake horizontal padding so we can align it
-  // from the right side of the element without relying on CSS3
-  background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMTJweCIgeT0iMHB4IiB3aWR0aD0iMjRweCIgaGVpZ2h0PSIzcHgiIHZpZXdCb3g9IjAgMCA2IDMiIGVuYWJsZS1iYWNrZ3JvdW5kPSJuZXcgMCAwIDYgMyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+);
-
-  // We can safely use leftmost and rightmost now
-  background-position: 100% center;
-
-  background-repeat: no-repeat;
-  border: 0;
-  line-height: normal;
-  padding: 0.5rem;
-}
+@import "utils";
 
 a {
   color: #336699;
@@ -68,3 +46,37 @@ select {
   }
 }
 
+.fullscreen-button {
+  $icon-size: 2.4rem;
+  $circle-size: $icon-size / 0.6;
+  $circle-padding: $circle-size * 0.2;
+  .fa {
+    font-size: $icon-size;
+  }
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: $circle-size;
+  height: $circle-size;
+  padding: $circle-padding;
+  text-align: center;
+  color: $faint-grey;
+  border: solid 2px $faint-grey;
+  border-radius: 100%;
+  margin: 15px;
+  z-index: 10;
+  cursor: pointer;
+  &:hover {
+    background-color: #1b1b1b;
+    color: $bright-text;
+    border: solid 2px $bright-text;
+  }
+}
+
+.media-item.fullscreen {
+  max-width: 100%;
+  width: 100%;
+  margin: 0;
+  background-color: $charcoal;
+  @include flex-video;
+}
