--- a/snueue/templates/layouts/stylesheets.html
+++ b/snueue/templates/layouts/stylesheets.html
@@ -1,6 +1,5 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
-{% assets filters="compass", output="build/app.css",
-  "stylesheets/app.scss" %}
+{% assets 'stylesheets' %}
   <link rel="stylesheet" href="{{ ASSET_URL }}">
 {% endassets %}
