--- a/snueue/templates/layouts/stylesheets.html
+++ b/snueue/templates/layouts/stylesheets.html
@@ -1,5 +1,7 @@
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+{% assets "stylesheets/vendor/font-awesome/css/font-awesome.min.css" %}
+  <link rel="stylesheet" href="{{ ASSET_URL }}">
+{% endassets %}
 {% assets 'stylesheets' %}
   <link rel="stylesheet" href="{{ ASSET_URL }}">
 {% endassets %}
